Fix - page layout cutoff issue22

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -372,7 +372,7 @@
 
 
 .pg2-plot-lgeo {
-  /* width: 90%; */
+  width: 1000px;
   /* display: block; */
   padding-top: 1%;
 }
